ci: docker - fix memory usage for all apps to allocate no more that 512mb RAM
Took 9 minutes